some fixes and localisation. And one issue found that when entering too many transactions that have the same date they start to overlap over each other and not all being displayed and incorrectly

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -423,6 +423,14 @@ input
         width: auto;
         margin: 0;
     }
+    .adapt-collapse
+    {
+        display: block;
+    }
+    .adapt-block-collapse
+    {
+        width: 100%;
+    }
     .conjoined-block > a > img
     {
         padding: 0;
